crates/obs-macros/tests/trybuild/fail/L003_secret_on_log.stderr
error[E0080]: evaluation panicked: obs L003: field `api_key` is SECRET on a `log` tier event
              note: SECRET fields are forbidden on LOG/AUDIT tiers because those tiers persist payloads to long-retained sinks.
              help: move the field to a non-secret column, or move the event to TRACE/METRIC tier (which do not persist payload bytes).
 --> tests/trybuild/fail/L003_secret_on_log.rs:5:26
  |
5 | #[derive(Debug, Default, Event)]
  |                          ^^^^^ evaluation of `_` failed here
